Adding feature: Delete a post

--- a/views/post/edit.erb
+++ b/views/post/edit.erb
@@ -63,7 +63,7 @@
             </div>
 
             <h3>Options</h3>
-            <a class="btn btn-primary" href="/post/rename/<%= @post.id %>" role="button">Rename Post</a>
+            <!--<a class="btn btn-primary" href="/post/rename/<%= @post.id %>" role="button">Rename Post</a>-->
             <a class="btn btn-danger" href="/post/delete/<%= @post.id %>" role="button">Delete Post</a>
 
         </div>
