Adding site create
The button that says 'Create site' now actually creates a new
Jekyll site, makes a git init, git add and git commit.

--- a/views/hyde/create.erb
+++ b/views/hyde/create.erb
@@ -15,7 +15,7 @@
             <% end %>
         <% end %>
 
-        <form method="post" action="/site/new">
+        <form method="post" action="/hyde/create">
             <div class="form-group">
                 <label for="name">Name</label>
                 <input type="text" class="form-control" id="name" name="name" placeholder="Name of website e.g. example.com or just: example">
