--- a/views/hyde/list.erb
+++ b/views/hyde/list.erb
@@ -1,4 +1,4 @@
-<a class="btn btn-primary pull-right" href="/hyde/new" role="button">Create Site</a>
+<a class="btn btn-primary pull-right" href="/hyde/create" role="button">Create Site</a>
 
 <h1 class="page-header">Jekyll websites</h1>
 
