A little bit of code cleanup
Absolutely not difference in functionality.

--- a/views/post/list.erb
+++ b/views/post/list.erb
@@ -14,7 +14,7 @@
 		</tr>
 		</thead>
 		<tbody>
-			<% @posts.each do |post| %>
+			<% posts.each do |post| %>
 			<tr>
 				<td><a href="/post/edit/<%= post[0] %>"><%= post[0] %></a></td>
 				<td><%= post[1] %></td>
