Renaming project from Mister Hyde to Utterson

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,7 +9,7 @@
     <meta name="author" content="Lasse Brandt">
     <link rel="icon" href="/favicon.ico">
 
-    <title>Mister Hyde</title>
+    <title>Utterson</title>
 
 	<link href="/css/bootstrap.min.css" rel="stylesheet" />
 	<script src="/js/bootstrap.min.js"></script>
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="/">Mister Hyde</a>
+          <a class="navbar-brand" href="/">Utterson</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-left">
