Move create site button to upper right corner
Just like we have it on the Posts list page.

--- a/views/hyde/list.erb
+++ b/views/hyde/list.erb
@@ -1,3 +1,5 @@
+<a class="btn btn-primary pull-right" href="/hyde/create" role="button">Create website</a>
+
 <h1 class="page-header">Jekyll websites</h1>
 
 <div class="table-responsive">
@@ -20,7 +22,5 @@
             <% end %>
         </tbody>
     </table>
-
-    <a class="btn btn-primary" href="/hyde/create" role="button">Create website</a>
 
 </div>
