Rewrite Post.all to load array of posts
Instead of some arbitrary array of contents.
It introduces another problem though. We load the entire posts
content into an array, we should create some sort of lazy loading
of the blog post itself ( which is by far the biggest and not at all
relevant for 99% of all use cases of Post.all )

--- a/views/post/list.erb
+++ b/views/post/list.erb
@@ -16,10 +16,10 @@
         <tbody>
             <% posts.each do |post| %>
             <tr>
-                <td><a href="/post/edit/<%= post[0] %>"><%= post[0] %></a></td>
-                <td><%= post[1] %></td>
-                <td><span class="label label-<% if post[2] %>success">Published<% else %>warning">Unpublished<% end %></span></td>
-                <td><%= post[3] %></td>
+                <td><a href="/post/edit/<%= post.id %>"><%= post.id %></a></td>
+                <td><%= post.settings['title'] %></td>
+                <td><span class="label label-<% if post.settings['published'] %>success">Published<% else %>warning">Unpublished<% end %></span></td>
+                <td><%= post.settings['date'] %></td>
             </tr>
             <% end %>
         </tbody>
